# astcheck

./: .gitignore  .travis.yml  MANIFEST.in  README.rst  astcheck-pkg.ini  astcheck.py  flit.ini  pyproject.toml  setup.py  test_astcheck.py
.github/workflows/: test.yml
doc/: Makefile  changes.rst  checking.rst  conf.py  index.rst  templateutils.rst
