[build-system]
requires = ["flit_core >=3.2,<3.3"]
build-backend = "flit_core.buildapi"

[project]
name = "astcheck"
authors = [
    {name = "Thomas Kluyver", email = "thomas@kluyver.me.uk"},
]
readme = "README.rst"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.5"
dynamic = ['version', 'description']

[project.urls]
Source = "https://github.com/takluyver/astcheck"
